samples/_failures_safe/1761317283_a85ddb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb1a9434.c: In function ‘main’:
./samples/SAFE/__tmp_cb1a9434.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge(graph, 2, 3);
      |     ^~~~~~~~
